--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 body {
+	background-repeat: no-repeat;
 	background-image: url("bg-market.jpeg") ;
+	background-color: black;
 	background-size: no-repeat;
 	color: #c2c2c4;
 }
 
 h1{
-	color: white;
+	color: #F0F0F0;
 	margin-top: 650px;
 	font-size: 120px;
 }
@@ -14,12 +16,21 @@ h2{
 	margin-top: 0;
 }
 
-div{
-	margin: 0 100px 0 100px;
-	border-radius: 100px;
-	padding: 100px;
+h5 {
+	margin: 3px;
+}
+
+.menu{
+	margin: 0 10% 150px 10%;
+	border-radius: 50px;
+	padding: 50px 50px 75px 50px;
 	background-color: #1a1b20;
 	font-size: 30px;
+}
+
+.info{
+	height: 100px;
+	background-color: #101010;
 }
 
 img {
@@ -31,11 +42,11 @@ img {
 }
 
 .first_product,.second_product,.third_product,.fourth_product,.five_product{
-	margin: 30px 10px 0 0;
+	margin: 35px 0 0 30px;
 	display: inline-block;
-	border-radius: 20px;
+	border-radius: 15px;
 	padding: 25px;
-	width: 20%;
+	width: 18%;
 	background: #282828;
 }
 
