--- a/style.css
+++ b/style.css
@@ -20,17 +20,42 @@ h5 {
 	margin: 3px;
 }
 
+div {
+	border-right: 1px solid hsla(0,0%,100%,.05);
+}
+
+.main_menu{
+	border: azure;
+	margin: 12px;
+	width: 24px;
+	height: 24px;
+	background-color: #222;
+}
+
 .menu{
-	margin: 0 10% 150px 10%;
+	margin: 0 10% 0 10%;
 	border-radius: 50px;
 	padding: 50px 50px 75px 50px;
-	background-color: #1a1b20;
+	background-color: #181818;
 	font-size: 30px;
 }
 
-.info{
-	height: 100px;
-	background-color: #101010;
+.left_panel {
+	background-color: #121212;
+	top: 0;
+	left: 0;
+	width: 	48px;
+	height: 100%;
+	position: fixed;
+}
+
+.bg_panel{
+	z-index: -1;
+	top: 900px;
+	position: absolute;
+	height: 100%;
+	width: 99%;
+	background-color: #121212;
 }
 
 img {
@@ -45,9 +70,10 @@ img {
 	margin: 35px 0 0 30px;
 	display: inline-block;
 	border-radius: 15px;
+	border: 1px solid hsla(0,0%,100%,.05);
 	padding: 25px;
 	width: 18%;
-	background: #282828;
+	background: #222;
 }
 
 a {
