--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
 	background-repeat: no-repeat;
 	background-image: url("bg-market.jpeg") ;
-	background-color: black;
+	background-color: #121212;
 	background-size: no-repeat;
 	color: #c2c2c4;
 }
@@ -33,7 +33,7 @@ div {
 }
 
 .menu{
-	margin: 0 10% 0 10%;
+	margin: 0 10% 150px 10%;
 	border-radius: 50px;
 	padding: 50px 50px 75px 50px;
 	background-color: #181818;
@@ -66,7 +66,7 @@ img {
 	margin: 0 5px 0 20px;
 }
 
-.first_product,.second_product,.third_product,.fourth_product,.five_product{
+.product{
 	margin: 35px 0 0 30px;
 	display: inline-block;
 	border-radius: 15px;
@@ -79,4 +79,14 @@ img {
 a {
 	color: #c2c2c4;
 	text-decoration: none;
+}
+
+header {
+  opacity: 0;
+  animation: ani 2.5s forwards;
+}
+
+@keyframes ani {
+  50% {opacity: 0;}
+  100% {opacity: 1;}
 }
